feat: ads + recharge stations model
